--- a/public/client/styles/partials/header.css
+++ b/public/client/styles/partials/header.css
@@ -165,13 +165,71 @@
   color: var(--primary-color);
   transition: 0.4s ease;
 }
+.header .header-others .header-others-box .header-others-cart {
+  position: relative;
+  text-decoration: none;
+  color: var(--dark-gray-color);
+}
+.header .header-others .header-others-box .header-others-cart .header-others-cart-number {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  width: 20px;
+  height: 20px;
+  background: rgb(231, 66, 45);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--light-gray-color);
+  font-size: 12px;
+  font-weight: 500;
+}
+.header .header-others .header-others-box .header-others-cart .header-others-cart-box {
+  width: 400px;
+  position: absolute;
+  top: 110%;
+  right: -100%;
+  background: white;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.214);
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(50px);
+  transition: 0.3s ease-out;
+}
+.header .header-others .header-others-box .header-others-cart:hover .header-others-cart-box {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0px);
+}
+.header .header-others .header-others-box .header-others-cart .header-others-cart-box::after {
+  width: 12px;
+  height: 12px;
+  content: '';
+  position: absolute;
+  z-index: 1000;
+  top: -4px;
+  right: 56px;
+  background: white;
+  transform: rotateZ(45deg);
+}
+.header
+  .header-others
+  .header-others-box
+  .header-others-cart
+  .header-others-cart-box
+  .header-others-cart-list {
+  width: 100%;
+  aspect-ratio: 1/1;
+}
 /* End Header */
 
 /* Nav */
 .navheader {
   position: sticky;
   top: 133px;
-  z-index: 1000;
+  z-index: 999;
   width: 100%;
   height: 50px;
   background-color: var(--dark-gray-color);
@@ -269,6 +327,29 @@
   float: right;
   background: var(--light-gray-color);
   cursor: pointer;
+  text-decoration: none;
+  color: var(--dark-gray-color);
+}
+.header-mobie .header-mobie-menu a.menu-icon {
+  position: relative;
+  text-decoration: none;
+  color: var(--dark-gray-color);
+}
+.header-mobie .header-mobie-menu a.menu-icon .header-others-cart-number {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background: rgb(231, 66, 45);
+  color: var(--light-gray-color);
+  font-size: 12px;
+  font-weight: 500;
+  z-index: 999;
 }
 .header-mobie .header-mobie-menu .menu-icon:hover {
   background: var(--primary-color);
