--- a/views/client/pages/home/index.view.ejs
+++ b/views/client/pages/home/index.view.ejs
@@ -36,7 +36,7 @@
   </head>
   <body>
     <%-include('../../partials/header.view.ejs', { categoryListTree: categoryTree, homeActive:
-    "active", aboutActive: '', productActive: '', newsActive: '', contactActive: '' }); %>
+    "active", aboutActive: '', productActive: '', newsActive: '', contactActive: '', cartActive: '' }); %>
     <%-include("../../partials/header-mobile.view.ejs") %>
 
     <main class="main">
