--- a/views/client/pages/product/product.view.ejs
+++ b/views/client/pages/product/product.view.ejs
@@ -37,7 +37,7 @@
   </head>
   <body>
     <%-include('../../partials/header.view.ejs', { categoryListTree: categoryTree, homeActive: '',
-    aboutActive: '', productActive: "active", newsActive: '', contactActive: '' }); %>
+    aboutActive: '', productActive: "active", newsActive: '', contactActive: '', cartActive: '' }); %>
     <%-include("../../partials/header-mobile.view.ejs") %>
 
     <main class="main">
