complete delete a product in cart page and mini cart feature client

--- a/views/client/partials/header.view.ejs
+++ b/views/client/partials/header.view.ejs
@@ -69,7 +69,10 @@
                 <li
                   class="d-flex gap-1 border border-bottom-1 border-top-0 border-end-0 border-start-0 p-1 header-others-cart-item"
                 >
-                  <div class="d-flex align-items-center cart-item-button">
+                  <div
+                    class="d-flex align-items-center cart-item-button cart-product-remove"
+                    product-id="<%= product.id %>"
+                  >
                     <i class="p-2 bg-light rounded-5 fa-solid fa-xmark"></i>
                   </div>
                   <div class="cart-item-img">
