--- a/views/client/pages/cart/cart.view.ejs
+++ b/views/client/pages/cart/cart.view.ejs
@@ -90,6 +90,7 @@
                         <form action="">
                           <input
                             type="number"
+                            min="0"
                             class="input-type01 text-center w-100 cart-body-product-quantity"
                             value="<%= product.quantity %>"
                           />
@@ -102,18 +103,26 @@
                         </div>
                       </td>
                       <td class="cart-body-cell cart-cell">
-                        <button
-                          class="button-icon-primary cart-body-product-remove"
-                          product-id="<%= product.productInfo._id %>"
-                        >
-                          <i class="bi bi-x-lg"></i>
-                        </button>
-                        <button class="button-icon-primary cart-body-product-like">
-                          <i class="bi bi-heart-fill"></i>
-                        </button>
+                        <div class="d-flex flex-wrap gap-2 cart-body-product-action">
+                          <button
+                            class="button-icon-primary cart-body-product-remove cart-product-remove"
+                            product-id="<%= product.productInfo._id %>"
+                          >
+                            <i class="bi bi-x-lg"></i>
+                          </button>
+                          <button class="button-icon-primary cart-body-product-like">
+                            <i class="bi bi-heart-fill"></i>
+                          </button>
+                        </div>
                       </td>
                     </tr>
-                    <% }) %> <% } %>
+                    <% }) %> <% } else { %>
+                    <tr>
+                      <td colspan="7" class="text-center">
+                        Ko có đơn hàng nào trong giỏ hàng. <a href="/products">Mua ngay</a>
+                      </td>
+                    </tr>
+                    <%}%>
                   </tbody>
                 </table>
               </div>
@@ -159,10 +168,18 @@
       </section>
     </main>
 
+    <form
+      action="/cart/delete"
+      method="POST"
+      class="d-none form-delete-product-cart"
+      id="form-delete-product-cart"
+    ></form>
+
     <%-include('../../partials/footer.view.ejs') %>
 
     <!-- Scripts File -->
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
+    <script src="/client/scripts/cart/deleteProductInCart.js"></script>
     <!-- End Scripts File -->
 
     <!-- Scripts Library & Framework Link -->
@@ -170,15 +187,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/aaf479b433.js" crossorigin="anonymous"></script>
-    <!-- SlickSlide -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script
-      type="text/javascript"
-      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
-    ></script>
-    <script type="text/javascript" src="/client/scripts/slickslide.js"></script>
-
-    <!-- <script src="./scripts/googlemap.js"></script> -->
     <!-- End Scripts Library & Framework Link -->
 
     <script src="/reload/reload.js"></script>
