--- a/views/client/pages/home/index.view.ejs
+++ b/views/client/pages/home/index.view.ejs
@@ -333,10 +333,26 @@
       <!-- End Google Map - Location -->
     </main>
 
+    <form
+      action="/cart/delete"
+      method="POST"
+      class="d-none form-delete-product-cart"
+      id="form-delete-product-cart"
+    ></form>
+
+    <form
+      action="/cart/change-quantity"
+      method="POST"
+      class="d-none form-change-quantity-cart"
+      id="form-change-quantity-cart"
+    ></form>
+
     <%-include('../../partials/footer.view.ejs') %>
 
     <!-- Scripts File -->
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
+    <script src="/client/scripts/cart/deleteProductInCart.js"></script>
+    <script src="/client/scripts/cart/changeProductQuantity.js"></script>
     <!-- End Scripts File -->
 
     <!-- Scripts Library & Framework Link -->
