complete offline payment feature client

--- a/views/client/pages/cart/cart.view.ejs
+++ b/views/client/pages/cart/cart.view.ejs
@@ -155,7 +155,7 @@
                 </div>
                 <div class="cart-payment">
                   <a
-                    href=""
+                    href="/payment"
                     class="button-secondary w-100 d-block text-center text-decoration-none cart-payment-btn"
                     >Tiến hành thanh toán</a
                   >
