--- a/views/client/partials/header.view.ejs
+++ b/views/client/partials/header.view.ejs
@@ -124,8 +124,10 @@
                 class="button-secondary text-center text-decoration-none header-others-cart-button"
                 >Đi Tới Giỏ Hàng</a
               >
-              <a class="button-primary text-center text-decoration-none header-others-cart-button"
-                >Thanh toán</a
+              <a
+                href="/payment"
+                class="button-primary text-center text-decoration-none header-others-cart-button"
+                >Tiến hành thanh toán</a
               >
             </div>
           </div>
