--- a/public/client/setup.css
+++ b/public/client/setup.css
@@ -133,7 +133,8 @@ input[type='range']::-webkit-slider-thumb {
   border-radius: 50%;
   cursor: pointer;
 }
-input[type='checkbox'] {
+input[type='checkbox'],
+input[type='radio'] {
   appearance: none;
   width: 12px;
   height: 12px;
@@ -142,7 +143,8 @@ input[type='checkbox'] {
   border-radius: 50%;
   cursor: pointer;
 }
-input[type='checkbox']:checked {
+input[type='checkbox']:checked,
+input[type='radio']:checked {
   background: var(--primary-color);
   border: var(--border-thickness-button) solid var(--primary-color);
 }
