complete payment fail feature client

--- a/public/client/setup.css
+++ b/public/client/setup.css
@@ -39,7 +39,7 @@
   --primary-outline-color-field: ;
 
   --success-color: #51a351;
-  --error-color: #bd362f;
+  --error-color: #d43027;
   --warning-color: #ffa600;
   --info-color: #2f96b4;
 }
