--- a/views/client/pages/payment/payment.view.ejs
+++ b/views/client/pages/payment/payment.view.ejs
@@ -83,7 +83,7 @@
                             Thông tin thanh toán
                           </h4>
                         </div>
-                        <div class="d-flex flex-column payment-info-form-input">
+                        <div class="d-flex flex-column gap-0 payment-info-form-input">
                           <div class="row row-gap-3">
                             <div class="col-lg-6 col-12">
                               <div class="w-100 payment-info-form-fullname form-input-fullname">
@@ -96,18 +96,16 @@
                                   type="text"
                                   name="fullname"
                                   id="fullname"
-                                  required
                                   placeholder="Nhập họ và tên..."
                                   class="input-type01 w-100 payment-info-form-inp form-inp-fullname"
                                 />
                                 <span
-                                  class="text-danger payment-info-form-error form-error-fullname"
-                                  >Vui lòng nhập địa chi email</span
-                                >
+                                  class="text-danger fs-6 fs-6 payment-info-form-error form-error-fullname"
+                                ></span>
                               </div>
                             </div>
                             <div class="col-lg-6 col-12">
-                              <div class="w-100 payment-info-form-phone form-input-phone">
+                              <div class="w-100 payment-info-form-input form-input-phone">
                                 <label
                                   for="phone"
                                   class="title-font payment-info-form-label form-label-phone"
@@ -117,13 +115,12 @@
                                   type="text"
                                   name="phone"
                                   id="phone"
-                                  required
                                   placeholder="Nhập số điện thoại..."
                                   class="input-type01 w-100 payment-info-form-inp form-inp-phone"
                                 />
-                                <span class="text-danger payment-info-form-error form-error-phone"
-                                  >Vui lòng nhập số điện thoại</span
-                                >
+                                <span
+                                  class="text-danger fs-6 payment-info-form-error form-error-phone"
+                                ></span>
                               </div>
                             </div>
                           </div>
@@ -135,16 +132,15 @@
                             >Email xác nhận thanh toán</label
                           >
                           <input
-                            type="email"
+                            type="text"
                             name="email"
                             id="email"
-                            required
                             placeholder="Nhập địa chi email..."
                             class="input-type01 payment-info-form-inp form-inp-email"
                           />
-                          <span class="text-danger payment-info-form-error form-error-email"
-                            >Vui lòng nhập địa chi email</span
-                          >
+                          <span
+                            class="text-danger fs-6 payment-info-form-error form-error-email"
+                          ></span>
                         </div>
                         <div
                           class="d-flex flex-column position-relative payment-info-form-input form-input-address"
@@ -158,13 +154,12 @@
                             type="text"
                             name="address"
                             id="address"
-                            required
                             placeholder="Nhập điểm nhận hàng..."
                             class="input-type01 payment-info-form-inp form-inp-address"
                           />
-                          <!-- <span class="text-danger payment-info-form-error form-error-address"
-                            >Vui lòng nhập điểm nhận hàng</span
-                          > -->
+                          <span
+                            class="text-danger fs-6 payment-info-form-error form-error-address"
+                          ></span>
                           <div
                             class="position-absolute w-100 top-100 p-2 shadow bg-white payment-info-form-map form-map-address"
                             id="map"
@@ -204,9 +199,9 @@
                               >Thanh toán online</label
                             >
                           </div>
-                          <span class="text-danger payment-info-form-error form-error-checkout"
-                            >Vui lòng chọn phương thức thanh toán</span
-                          >
+                          <span
+                            class="text-danger fs-6 payment-info-form-error form-error-checkout"
+                          ></span>
                         </div>
                         <div class="payment-info-form-input form-input-shipping">
                           <h4 class="title-font payment-info-form-title">Phương thức vận chuyển</h4>
@@ -252,9 +247,9 @@
                               >Nhận tại cửa hàng</label
                             >
                           </div>
-                          <span class="text-danger payment-info-form-error form-error-shipping"
-                            >Vui lòng chọn phương thức vận chuyển</span
-                          >
+                          <span
+                            class="text-danger fs-6 payment-info-form-error form-error-shipping"
+                          ></span>
                         </div>
                         <div class="payment-info-form-btn">
                           <button
@@ -290,6 +285,9 @@
     ></form>
 
     <%-include('../../partials/footer.view.ejs') %>
+
+    <!-- Validator -->
+    <script src="https://unpkg.com/validator@latest/validator.min.js"></script>
 
     <!-- Scripts File -->
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
