--- a/views/client/pages/product/detail.view.ejs
+++ b/views/client/pages/product/detail.view.ejs
@@ -36,8 +36,8 @@
   </head>
   <body>
     <%-include('../../partials/header.view.ejs', { categoryListTree: categoryTree, homeActive: '',
-    aboutActive: '', productActive: "active", newsActive: '', contactActive: '', cartActive: '' }); %>
-    <%-include("../../partials/header-mobile.view.ejs") %>
+    aboutActive: '', productActive: "active", newsActive: '', contactActive: '', cartActive: '' });
+    %> <%-include("../../partials/header-mobile.view.ejs") %>
 
     <main class="main">
       <!-- Prroduct detail -->
