--- a/views/client/pages/product/product.view.ejs
+++ b/views/client/pages/product/product.view.ejs
@@ -248,7 +248,7 @@
                         <i class="bi bi-star-fill"></i>
                         <% } %>
                       </div>
-                      <form action="/cart/add/<%= product.id %>" method="POST">
+                      <form <% if(product.stock > 0) { %> action="/cart/add/<%= product.id %>" method="POST" <% } %>>
                         <button type="submit" class="border-0 bg-transparent"><i title="add to cart" class="bi bi-bag-check-fill"></i></button>
                       </form>
                     </div>
