--- a/views/admin/pages/product/update.view.ejs
+++ b/views/admin/pages/product/update.view.ejs
@@ -65,16 +65,25 @@
 
               <div class="col-12">
                 <div class="form-group mb-4">
-                  <label for="description">Mô tả</label>
+                  <label for="description">Mô tả ngắn</label>
                   <textarea name="description" class="form-control" id="description">
 <%= product.description %></textarea
                   >
                 </div>
               </div>
 
+              <div class="col-12">
+                <div class="form-group mb-4">
+                  <label for="detail">Mô tả chi tiết</label>
+                  <textarea name="detail" class="form-control" id="detail">
+<%= product.detail %></textarea
+                  >
+                </div>
+              </div>
+
               <div class="col-6">
                 <div class="form-group mb-4">
-                  <label for="price">Giá ($)</label>
+                  <label for="price">Giá (đ)</label>
                   <input
                     type="number"
                     value="<%= product.price %>"
@@ -187,7 +196,7 @@
 
               <div class="col-6">
                 <div class="form-group mb-4">
-                  <label for="shipping_fee">Phí vận chuyển ($)</label>
+                  <label for="shipping_fee">Phí vận chuyển (đ)</label>
                   <input
                     type="number"
                     value="<%= product.shipping_fee %>"
@@ -268,6 +277,12 @@
     <!-- Script Library & Framwork -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/aaf479b433.js" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.tiny.cloud/1/j8bmm28z8l7u8m5at9v64rveeytj143ibxpezl0aks1g6uzx/tinymce/8/tinymce.min.js"
+      referrerpolicy="origin"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/admin/scripts/tinymce.js"></script>
     <script src="../../../reload/reload.js"></script>
   </body>
 </html>
