--- a/views/client/pages/product/product.view.ejs
+++ b/views/client/pages/product/product.view.ejs
@@ -101,14 +101,17 @@
                   value="<%= priceFilter.to %>"
                   min="0"
                   max="<%= productMaxPrice.price %>"
-                  step="0.01"
+                  step="500"
                   title="<%= priceFilter.to %>"
                 />
                 <div class="filter__price-minmax d-flex justify-content-between">
-                  <span class="content-font filter__price-min">Từ: $0</span>
-                  <span class="content-font filter__price-value">Tới: $<%= priceFilter.to %></span>
+                  <span class="content-font filter__price-min">Từ: <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
+                    }).format(0)%></span>
+                  <span class="content-font filter__price-value">Tới: <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
+                    }).format(priceFilter.to) %></span>
                   <span class="content-font filter__price-max"
-                    >Tối đa: $<%= productMaxPrice.price %></span
+                    >Tối đa: <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
+                    }).format(productMaxPrice.price) %></span
                   >
                 </div>
                 <hr />
@@ -232,15 +235,17 @@
                     </div>
                     <div class="card__box d-flex justify-content-between align-items-center">
                       <h5 class="title-font card__price">
-                        $<%= Number.parseFloat(product.price - (product.price / 100 *
-                        product.discount)).toFixed(2) %>
+                        <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
+                    }).format(Number.parseFloat(product.price - (product.price / 100 *
+                        product.discount)))%>
                       </h5>
                       <div class="card__favorite">
                         <i class="bi bi-suit-heart-fill"></i>
                       </div>
                     </div>
                     <div class="content-font text-danger text-decoration-line-through">
-                      Giá gốc: $<%= product.price %>
+                      Giá gốc: <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
+                    }).format(product.price) %>
                     </div>
                     <div class="card__rating d-flex justify-content-between align-items-center">
                       <div class="card__star">
